# Robot-Dog-Old

./: .gitignore  Dockerfile  README.md  client.py  docker-compose.yaml  mc_test.py  server.py  serverx.py  test_node.py
2021-2022/Northeastern-Robotics-main/Robot-Dog/practice/simple_drive_practice/: CMakeLists.txt  package.xml  readme.md
2021-2022/Northeastern-Robotics-main/Robot-Dog/practice/simple_drive_practice/launch/: simple_drive_gazebo.launch
2021-2022/Northeastern-Robotics-main/Robot-Dog/practice/simple_drive_practice/scripts/: sample_script_lvov.py
2021-2022/Northeastern-Robotics-main/Robot-Dog/practice/simple_drive_practice/urdf/: simple_skid_steer.urdf.xacro
2021-2022/Northeastern-Robotics-main/Robot-Dog/practice/simple_drive_practice/urdf/meshes/: hokyo.dae
2021-2022/Northeastern-Robotics-main/Robot-Dog/practice/simple_drive_practice/worlds/test_track/: model.config  model.sdf
2023/: Moteus.py  MoteusException.py  exampleMotorInput2.JSON  testMoteusJSON.py
cpu-catkins/: Dockerfile  (+3 more)
ros_ws/src/nu_dog_config/: CMakeLists.txt  README.md  config.json  package.xml
ros_ws/src/nu_dog_config/config/joints/: joints.yaml
ros_ws/src/nu_dog_config/config/links/: links.yaml
ros_ws/src/nu_dog_config/include/: quadruped_description.h
ros_ws/src/nu_dog_config/launch/: bringup.launch  gazebo.launch  navigate.launch  slam.launch  spawn_robot.launch
ros_ws/src/nu_dog_config/launch/include/: move_base.launch
simulation/proof_of_concept_3_dof_legs_description/: CMakeLists.txt  package.xml
simulation/proof_of_concept_3_dof_legs_description/config/: individual-pos.yaml
simulation/proof_of_concept_3_dof_legs_description/launch/: controller.launch
simulation/proof_of_concept_3_dof_legs_description/meshes/: base_link.stl  lf_upper_1.stl  lh_connector_1.stl  lh_lower_1.stl  lh_upper_1.stl  rf_connector_1.stl  rf_lower_1.stl  rf_upper_1.stl  rh_lower_1.stl
simulation/proof_of_concept_3_dof_legs_description/rviz/: urdf.rviz
simulation/proof_of_concept_3_dof_legs_description/urdf/: materials.xacro  proof_of_concept_3_dof_legs.gazebo  proof_of_concept_3_dof_legs.xacro
(+304 files in other folders)
