<?xml version="1.0"?>
<package format="2">
  <name>proof_of_concept_3_dof_legs_description</name>
  <version>0.0.0</version>
<description>The proof_of_concept_3_dof_legs_description package</description>

  <maintainer email="lvov.g@northeastern.edu">garylvov</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <export>
  </export>
</package>
